--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -16,7 +16,7 @@
   margin-bottom: 1em;
 
   @include breakpoint($large) {
-    @include span(2 of 12);
+    @include span(2.5 of 12);
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
@@ -75,6 +75,7 @@
     display: block;
   }
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-content: flex-start;
   align-items: center;
@@ -236,7 +237,10 @@
   }
 
   li {
-    white-space: nowrap;
+    white-space: normal;
+    @include breakpoint($large) {
+      white-space: nowrap;
+    }
   }
 
   a {
