--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -177,3 +177,20 @@ h1:before, .anchor:before {
     margin-top: 0;
     margin-bottom: 0.75rem;
 }
+
+.profile-actions-inline {
+    display: inline-flex;
+    margin-left: 0.5rem;
+}
+
+.profile-actions-inline .btn {
+    font-size: $type-size-5;
+    padding: 0.1em 0.4em;
+    background-color: #e6f2ff;
+    color: #0050a0 !important;
+    border: 1px solid #b3d4ff !important;
+}
+
+.profile-actions-inline .btn:hover {
+    background-color: #d0e7ff;
+}
